--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
                 <option value="الافيستا رأس الحكمة">الافيستا رأس الحكمة</option>
                 <option value="دبلوماسيين - خضار">دبلوماسيين - خضار</option>
                 <option value="هاسيندا ريد - خضار">هاسيندا ريد - خضار</option>
+                <option value="فوكا باي">فوكا باي</option>
                 <option value="القطامية">القطامية</option>
                 <option value="بالم هيلز رايد">بالم هيلز رايد</option>
             </select>
