--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="loader" style="display: none;"><i class="fa fa-spinner fa-spin"></i>  Loading...</div>
 
 <div class="container">
-    <h1><i class="fa fa-file-alt"></i> Document Tracker (Google Sheets)</h1>
+    <h1><i class="fa fa-file-alt"></i>  Tracker </h1>
     <label for="description"><i class="fa fa-file-text"></i> Document Description:</label>
     <textarea id="description" rows="3" required placeholder="e.g., Invoices, Contracts, Memos..."></textarea>
     <div class="form-row" style="margin-top: 25px;">
